pipeline refresh with env vars